# australian_voting

./: CMakeLists.txt  large_test.in  test.in  voting.c++
